@@ -4,7 +4,11 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
-Thu, Oct 21, 2009
+Sat, Oct 24, 2009
+---------------------------------------------------------------------
+- Allow renaming both main and admin tabs (see config/settings.yml).
+
+Thu, Oct 22, 2009
 ---------------------------------------------------------------------
 - Fixed SASS deprecation warnings making it compatible with Heroku again (thanks, Jim!).
 - Refactored Facebox library (again!) to take into account [base_url] setting.
